--- a/views/site.ejs
+++ b/views/site.ejs
@@ -4,32 +4,51 @@
   
   </head>
   <style>
-  h1{
-    padding: 130px;
-    text-align: left;
+    h1{
+    padding: 120px;
+    text-align: center;
     padding-top: 0px;
-  }
-  a{
+    }
+   a{
      color: brown;
-     padding: 30px;
+     padding: 500px;
     text-align: left;
-    padding-top: 5px;
-  }
-      
+    margin-top: 15px;
+    
+   }
+  body{
+        background-image: url("http://www.sanjayghodawatuniversity.ac.in/departments/electrical-engi/images/usefull-link.jpg");}
+
+
 
    </style>
 
      <body>
           <form method="post" action="/"></form>
-   
           <h1>scolar.com</h1>
           <p><b><a href="default.asp" target="_blank">Related Link</a></b></p>
+
+       
+    <H1>
+       <A HREF="https://scholar.google.com/"> Google scholar </A>
+       <BR>
+       <A HREF=""> Journel Research </A>
+       <BR>
+       <A HREF="">Free Academic Journel Articles </A>
+       <A HREF="http://www.sciencedomain.org/journal/22"> Scientific Research  </A>
+       <BR>
+       <A HREF="http://www.theresearchjournal.net/"> Research journal  </A>
+       <BR>
+       </H1>
+       </TABLE>
+
+        
         
           
     
           <form action="/" method = "get">
-          <button type="submit" class="btn btn-warning btn-lg" >GET STARTED</button>
-         </form>                
+          <button  type="submit" class="btn btn-warning btn-lg" >Back</button>
+                 </form>                
 
      </body>
   
