Rendering And Redirecting

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,8 @@
   <style>
       body{
         background-image: url("https://cdn.icon-icons.com/icons2/505/PNG/512/glasses-books_icon-icons.com_49292.png");
+         background-repeat: no-repeat;
+         background-size: 2000px 1000px;
 
          }
          
@@ -30,14 +32,14 @@
    </style>
 
      <body>
-          <form method="post" action="/site"></form>
+          <form method="post" action="/signup"></form>
    
           <h1><%= title %></h1>
           <p>Welcome to <%= title %></p>
           <p>Find Articles And Journels</p>
 
     
-          <form action="/site" method = "get">
+          <form action="/signup" method = "get">
           <button type="submit" class="btn btn-warning btn-lg" >GET STARTED</button>
          </form>                
 
