--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,15 +1,65 @@
 <!DOCTYPE html>
 <html>
   <head>
-  
+     <h1>Login Form</h1>
   </head>
   <body>
+
+  
+
+  	<style>
+
+
+	  	 body {
+	    background-image: url('https://cms-assets.tutsplus.com/uploads/users/1500/posts/31260/image/summer_nature_background_with_green_grass_and_butterfly_and_blue_sky.jpg');
+	    margin: 0;
+	    background-size: 1350px 800px;
+	   
+	}
+  		body {font-family: Arial, Helvetica, sans-serif;}
+        form {border: 5px solid #f1f1f1;}
+
+        input[type=text], input[type=password] {
+	    width: 50%;
+	    padding: 13px 15px;
+	    margin: 30px 0;
+	    display: inline-block;
+	    border: 1px solid #ccc;
+	    box-sizing: border-box;
+	}
+
+    button {
+	    background-color: #4CAF50;
+	    color: white;
+	    padding: 14px 20px;
+	    margin: 8px 0;
+	    border: none;
+	    cursor: pointer;
+	    width: 50%;
+	}
+
+    button:hover {
+    	opacity: 0.8;
+    }
+
+    
+    </style>
+    <div class="background-image"></div>
+
+
   	<form method="post" action="/login">
   
 		username:<input type="text" name="username" id ="nameInput"><br/>
 	    password:<input type ="password"  name="password" id ="passwordInput"><br/>
-	   
+	</form>
+	  
+	<form method="get" action="/site">
 	    <button type="submit">login</button>
+    </form>
+
+	 <br><label>
+      <input type="checkbox" checked="checked" name="remember"> Remember Password?
+    </label
 	  
 
      </body>
