--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,16 +1,63 @@
 <!DOCTYPE html>
 <html>
   <head>
-  
+  <h1>Sign Up</h1>
   </head>
+  <p>Please sigup if you haven't done and feel free to access scolor.com</p>
   <body>
+  	<style>
+        body {
+	        background-image: url('https://cms-assets.tutsplus.com/uploads/users/1500/posts/31260/image/summer_nature_background_with_green_grass_and_butterfly_and_blue_sky.jpg');
+	    	margin: 0;
+	    	background-size: 1350px 700px;
+	   
+			}
+		body {font-family: Arial, Helvetica, sans-serif;}
+        form {border: 5px solid #f1f1f1;}
+        	}
+  		body {font-family: Arial, Helvetica, sans-serif;}
+        form {border: 5px solid #f1f1f1;}
+
+        input[type=text], input[type=password] {
+	    width: 50%;
+	    padding: 13px 15px;
+	    margin: 8px 0;
+	    display: inline-block;
+	    border: 1px solid #ccc;
+	    box-sizing: border-box;
+	}
+
+    button {
+	    background-color: #4CAF50;
+	    color: white;
+	    padding: 14px 20px;
+	    margin: 30px 0;
+	    border: none;
+	    cursor: pointer;
+	    width: 50%;
+	}
+
+    button:hover {
+    	opacity: 0.8;
+    }
+
+    
+    </style>
+    <div class="background-image"></div>
+
+
+
   	<form method="post" action="/signup">
   
 		username:<input type="text" name="username" id ="nameInput"><br/>
 	    password:<input type ="password"  name="password" id ="passwordInput"><br/>
 	    Repassword:<input type ="password"  name="repassword" id ="repasswordInput"><br/>
-	    <button type="submit">signup</button>
-	  
+	 </form>   
+
+	   <form action="/login" method = "get">
+          <button type="submit" class="btn btn-warning btn-lg" >Signup</button>
+         </form>                
+
 
      </body>
 </html>
